# ollama-controller

./: Cargo.toml  readme.md
db/: docker-compose.yaml
src/: html_to_base64.rs  main.rs  ollama_instance.rs  tools.rs  v2_confluence.rs  vecstore.rs
src/ollama_instance/: tools.rs
